<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Materialistic</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">Top Stories</string>
    <string name="title_activity_best">Best Stories</string>
    <string name="title_activity_item">Comments</string>
    <string name="title_activity_release">What\'s New</string>
    <string name="title_activity_proxy">Proxy</string>
    <string name="filter_title_item">Materialistic</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="view_in_browser">View in external browser</string>
    <string name="share">Share</string>
    <string name="title_activity_about">About</string>
    <string name="license_title">License</string>
    <string name="third_party_licenses_title">3rd Party Licenses</string>
    <string name="developer_info_title">Developer Info</string>
    <string name="application_info_title">Application Info</string>
    <string name="application_info_text">
        <![CDATA[
            <p>Version: %1$s (%2$d)</p>
            <p>This application is open source at <a href="https://github.com/hidroh/materialistic">github.com/hidroh/materialistic</a></p>
        ]]>
    </string>
    <string name="libraries_title">Libraries &amp; Resources</string>
    <string name="title_activity_favorite">Saved Stories</string>
    <string name="saved">Saved %1$s ago</string>
    <string name="toast_saved">Story saved</string>
    <string name="clear_all">Clear all</string>
    <string name="toast_removed">Story unsaved</string>
    <string name="no_saved_stories">No saved stories so far</string>
    <string name="no_comments">It\'s still quiet here</string>
    <string name="confirm_clear">Clear all saved stories?</string>
    <string name="export">Export</string>
    <string name="clear_selected">Clear selected</string>
    <string name="confirm_clear_selected">Clear selected saved stories?</string>
    <string name="search">Search</string>
    <string name="hint_search_saved_stories">Search saved stories</string>
    <string name="no_stories_search">Couldn\'t find what you\'re looking for</string>
    <string name="display">Display</string>
    <string name="pref_external_title">Use external browser</string>
    <string name="pref_external_summary">Read articles in external browser</string>
    <string name="pref_color_code_title">Color code</string>
    <string name="pref_color_code_opacity_title">Color code opacity</string>
    <string name="pref_highlight_updated_title">Highlight updated stories</string>
    <string name="pref_highlight_updated_summary">Show changes from last refresh</string>
    <string name="pref_custom_tab_title">Use custom tabs</string>
    <string name="pref_custom_tab_summary">Open a browser tab instead of full browser</string>
    <string name="pref_story_display_title">Default open</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_daynight_title">Auto day-night mode</string>
    <string name="pref_search_sort_title">Sort by</string>
    <string name="pref_search_sort_value_recent">recent</string>
    <string name="pref_search_sort_value_default">default</string>
    <string name="pref_text_size_title">Text size</string>
    <string name="pref_font_title">Font</string>
    <string name="pref_comment_display_title">Thread</string>
    <string name="pref_max_lines_title">Long comment</string>
    <string name="pref_multi_window_title">Multi-window mode</string>
    <string name="pref_multi_window_summary">Which window to open story (Android 7+)</string>
    <string name="pref_multi_window_none">Same</string>
    <string name="pref_multi_window_one">Other</string>
    <string name="pref_navigation_title">On-screen navigation</string>
    <string name="pref_navigation_vibrate_title">Vibrate on touch</string>
    <string name="pref_lazy_load_title">Lazy load content</string>
    <string name="pref_lazy_load_summary">Load content only when you switch to its tab</string>
    <string name="pref_saved_item_sync_title">Enable offline access</string>
    <string name="pref_saved_item_sync_summary">Download content when you save story</string>
    <string name="pref_offline_data_title">When to download</string>
    <string name="pref_offline_comments_title">Download comments</string>
    <string name="pref_offline_article_title">Download article</string>
    <string name="pref_offline_readability_title">Download readability</string>
    <string name="pref_offline_data_wifi">Wifi only</string>
    <string name="pref_offline_data_always">Always</string>
    <string name="pref_offline_notification_title">Display progress</string>
    <string name="pref_offline_notification_summary">Show notification for download progress</string>
    <string name="pref_launch_screen_title">Default screen</string>
    <string name="pref_volume_title">Use volume navigation</string>
    <string name="pref_volume_summary">Scroll up/down with volume keys</string>
    <string name="pref_ad_block_title">Block ads</string>
    <string name="pref_ad_block_summary">Enable simple ad blocker for internal browser</string>
    <string name="pref_line_height_title">Line spacing</string>
    <string name="pref_list_item_view_title">Show as cards</string>
    <string name="pref_thread_indicator_title">Thread indicator</string>
    <string name="pref_widget_section_title">Section</string>
    <string name="pref_widget_query_title">Filter by query (optional)</string>
    <string name="pref_widget_frequency_title">Update frequency</string>
    <string name="pref_auto_viewed_title">Auto mark as viewed</string>
    <string name="pref_auto_viewed_summary">Mark stories as viewed as you swipe up</string>
    <string name="pref_smooth_scroll_title">Animate navigation</string>
    <string name="pref_smooth_scroll_summary">Disable to improve scroll accuracy</string>
    <string name="pref_list_swipe_left_title">Swipe left to</string>
    <string name="pref_list_swipe_right_title">Swipe right to</string>
    <string name="pref_proxy_enabled_title">Use proxy</string>
    <string name="pref_proxy_enabled_summary">Use a proxy server for all network requests not made via an external browser</string>
    <string name="pref_proxy_protocol_title">Proxy protocol</string>
    <string name="pref_proxy_protocol_socks">SOCKS</string>
    <string name="pref_proxy_protocol_http">HTTP</string>
    <string name="pref_proxy_host_title">Proxy server host</string>
    <string name="pref_proxy_port_title">Proxy server port</string>
    <string name="connection_error">Unable to connect to Hacker News. Check your connection or try again.</string>
    <string name="select_story">Select a story to view</string>
    <string name="download_external">View in another app</string>
    <string name="try_me">Long press/swipe one to save it for later!</string>
    <string name="title_activity_jobs">Jobs</string>
    <string name="title_activity_show">Show HN</string>
    <string name="title_activity_ask">Ask HN</string>
    <string name="title_activity_new">New Stories</string>
    <string name="title_activity_search">Search HN</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="clear_search_history_confirm">Clear search history?</string>
    <string name="undo">Undo</string>
    <plurals name="score">
        <item quantity="other">%1$sp</item>
    </plurals>
    <string name="comments">Comments</string>
    <plurals name="comments_count">
        <item quantity="zero">%1$s Comment</item>
        <item quantity="one">%1$s Comment</item>
        <item quantity="other">%1$s Comments</item>
    </plurals>
    <string name="article">Article</string>
    <string name="reset_settings">Reset all settings</string>
    <string name="reset_settings_confirm">Reset all your preferences to app defaults?</string>
    <string name="last_updated">Last updated %1$s</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="title_hint">Title</string>
    <string name="comment_hint">Comment</string>
    <string name="feedback_note">
        <![CDATA[
            Your feedback will be made public as a <a href="https://github.com/hidroh/materialistic/issues">Materialistic Github issue</a>.
        ]]>
    </string>
    <string name="title_required">Title is required</string>
    <string name="comment_required">Comment is required</string>
    <string name="feedback_sent">Feedback sent. Thank you!</string>
    <string name="feedback_failed">Failed to send, please try again</string>
    <string name="chooser_title">Open with</string>
    <string name="title_activity_popular">Catch Up</string>
    <string name="range">Range</string>
    <string name="popular_range_last_24h">Last 24h</string>
    <string name="popular_range_past_week">Past week</string>
    <string name="popular_range_past_month">Past month</string>
    <string name="popular_range_past_year">Past year</string>
    <plurals name="new_stories_count">
        <item quantity="zero">%1$s new story</item>
        <item quantity="one">%1$s new story</item>
        <item quantity="other">%1$s new stories</item>
    </plurals>
    <string name="show_me">Show me</string>
    <plurals name="showing_new_stories">
        <item quantity="zero">Showing %1$s new story</item>
        <item quantity="one">Showing %1$s new story</item>
        <item quantity="other">Showing %1$s new stories</item>
    </plurals>
    <string name="show_all">Show all</string>
    <string name="whats_this">What\'s this?</string>
    <string name="got_it">Got it</string>
    <string name="help_new_story">New story since last refresh</string>
    <string name="help_promoted_story">Promoted story since last refresh</string>
    <string name="help_new_comments">Story with new comments since last refresh</string>
    <string name="help_lazy_load">With lazy loading setting enabled, only your preferred default tab will be loaded when an item is first opened.\n\nIf you are on a slow connection or encounter lagging, turning this on may help.</string>
    <string name="help_volume_up">Press volume up to scroll up</string>
    <string name="help_long_volume_up">Long press volume up to quick scroll to top</string>
    <string name="help_volume_down">Press volume down to scroll down</string>
    <string name="help_navigate">Display a floating navigation button that responds to swipe gestures to navigate nested comment threads.</string>
    <string name="help_navigate_up">Swipe \u2191: go to previous comment</string>
    <string name="help_navigate_down">Swipe \u2193: go to next comment</string>
    <string name="help_navigate_right">Swipe \u2192: expand &amp; go to 1st reply</string>
    <string name="readability">Readability</string>
    <string name="search_sort_recent">More recent</string>
    <string name="search_sort_popularity">Popularity</string>
    <string name="font_options">Font options</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="login_note">Your credentials will be stored securely under your device\'s Settings / Accounts</string>
    <string name="send">Send</string>
    <string name="quote">Quote</string>
    <string name="formatting_guidelines">HN formatting guidelines</string>
    <string name="create_account">Create account</string>
    <string name="title_activity_submit">Submit to HN</string>
    <string name="title_activity_user">My Profile</string>
    <string name="logout">Logout</string>
    <string name="offline">Offline</string>
    <string name="save_draft">Save draft</string>
    <string name="discard_draft">Discard draft</string>
    <string name="more_sections">More sections</string>
    <string name="list">List</string>
</resources>