<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    tools:context="io.github.hidroh.materialistic.DrawerFragment">

    <TextView
        android:text="@string/app_name"
        android:textColor="?attr/themedTextColorPrimary"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textStyle="bold"
        android:drawableRight="@drawable/ic_app"
        android:background="@color/colorPrimary"
        style="@style/DrawerTextStyle"/>

    <View
        android:background="@color/colorDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <TextView
        android:id="@id/drawer_list"
        android:text="@string/title_activity_list"
        android:drawableLeft="@drawable/ic_trending_up_grey600_24dp"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@id/drawer_popular"
        android:text="@string/title_activity_popular"
        android:drawableLeft="@drawable/ic_whatshot_grey600_24dp"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@id/drawer_new"
        android:text="@string/title_activity_new"
        android:drawableLeft="@drawable/ic_new_releases_grey600_24dp"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@id/drawer_show"
        android:text="@string/title_activity_show"
        android:drawableLeft="@drawable/ic_done_grey600_24dp"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@id/drawer_ask"
        android:text="@string/title_activity_ask"
        android:drawableLeft="@drawable/ic_live_help_grey600_24dp"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@id/drawer_job"
        android:text="@string/title_activity_jobs"
        android:drawableLeft="@drawable/ic_work_grey600_24dp"
        style="@style/DrawerTextStyle"/>

    <View
        android:background="@color/colorDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <TextView
        android:id="@id/drawer_favorite"
        android:text="@string/title_activity_favorite"
        android:drawableLeft="@drawable/ic_bookmark_grey600_24dp"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@id/drawer_settings"
        android:text="@string/action_settings"
        android:drawableLeft="@drawable/ic_settings_grey600_24dp"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@id/drawer_feedback"
        android:text="@string/feedback"
        android:drawableLeft="@drawable/ic_feedback_grey600_24dp"
        style="@style/DrawerTextStyle"/>

    <TextView
        android:id="@id/drawer_about"
        android:text="@string/title_activity_about"
        android:drawableLeft="@drawable/ic_info_grey600_24dp"
        style="@style/DrawerTextStyle"/>

</LinearLayout>
