<!--
  ~ Copyright (c) 2015 Ha Duy Trung
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:focusable="true"
    tools:context="io.github.hidroh.materialistic.DrawerActivity"
    tools:targetApi="honeycomb">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_header_height">

        <ImageView
            android:src="?attr/backgroundDrawerHeader"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/login" />

        <io.github.hidroh.materialistic.widget.TintableTextView
            android:id="@id/drawer_account"
            android:text="@string/login"
            android:textColor="?android:attr/textColorPrimary"
            app:iconStart="@drawable/ic_lock_white_24dp"
            android:layout_gravity="bottom"
            android:paddingRight="88dp"
            style="@style/DrawerTextStyle" />

        <ImageButton
            android:id="@id/drawer_logout"
            android:src="@drawable/ic_power_settings_new_white_24dp"
            android:contentDescription="@string/logout"
            android:tint="?android:attr/textColorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_gravity="bottom|end"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/listPreferredItemHeight" />
    </FrameLayout>

    <View
        android:background="@color/blackT12"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider" />

    <io.github.hidroh.materialistic.widget.TintableTextView
        android:id="@id/drawer_list"
        android:text="@string/title_activity_list"
        app:iconStart="@drawable/ic_trending_up_white_24dp"
        style="@style/DrawerTextStyle"/>

    <io.github.hidroh.materialistic.widget.TintableTextView
        android:id="@id/drawer_popular"
        android:text="@string/title_activity_popular"
        app:iconStart="@drawable/ic_history_white_24dp"
        style="@style/DrawerTextStyle"/>

    <io.github.hidroh.materialistic.widget.TintableTextView
        android:id="@id/drawer_new"
        android:text="@string/title_activity_new"
        app:iconStart="@drawable/ic_new_releases_white_24dp"
        style="@style/DrawerTextStyle"/>

    <io.github.hidroh.materialistic.widget.TintableTextView
        android:id="@id/drawer_more"
        android:text="@string/more_sections"
        app:iconStart="@drawable/ic_dummy_transparent_24dp"
        app:iconEnd="@drawable/ic_expand_more_white_24dp"
        style="@style/DrawerTextStyle"/>

    <LinearLayout
        android:id="@+id/drawer_more_container"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <io.github.hidroh.materialistic.widget.TintableTextView
            android:id="@id/drawer_best"
            android:text="@string/title_activity_best"
            app:iconStart="@drawable/ic_thumb_up_white_24dp"
            style="@style/DrawerTextStyle"/>

        <io.github.hidroh.materialistic.widget.TintableTextView
            android:id="@id/drawer_show"
            android:text="@string/title_activity_show"
            app:iconStart="@drawable/ic_done_white_24dp"
            style="@style/DrawerTextStyle"/>

        <io.github.hidroh.materialistic.widget.TintableTextView
            android:id="@id/drawer_ask"
            android:text="@string/title_activity_ask"
            app:iconStart="@drawable/ic_live_help_white_24dp"
            style="@style/DrawerTextStyle"/>

        <io.github.hidroh.materialistic.widget.TintableTextView
            android:id="@id/drawer_job"
            android:text="@string/title_activity_jobs"
            app:iconStart="@drawable/ic_work_white_24dp"
            style="@style/DrawerTextStyle"/>

    </LinearLayout>

    <View
        android:background="@color/blackT12"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider" />

    <io.github.hidroh.materialistic.widget.TintableTextView
        android:id="@id/drawer_favorite"
        android:text="@string/title_activity_favorite"
        app:iconStart="@drawable/ic_bookmark_white_24dp"
        style="@style/DrawerTextStyle"/>

    <io.github.hidroh.materialistic.widget.TintableTextView
        android:id="@id/drawer_user"
        android:text="@string/title_activity_user"
        app:iconStart="@drawable/ic_person_white_24dp"
        style="@style/DrawerTextStyle"/>

    <io.github.hidroh.materialistic.widget.TintableTextView
        android:id="@id/drawer_submit"
        android:text="@string/title_activity_submit"
        app:iconStart="@drawable/ic_add_white_24dp"
        style="@style/DrawerTextStyle"/>

    <View
        android:background="@color/blackT12"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider" />

    <io.github.hidroh.materialistic.widget.TintableTextView
        android:id="@id/drawer_feedback"
        android:text="@string/feedback"
        app:iconStart="@drawable/ic_feedback_white_24dp"
        style="@style/DrawerTextStyle"/>

    <io.github.hidroh.materialistic.widget.TintableTextView
        android:id="@id/drawer_settings"
        android:text="@string/action_settings"
        app:iconStart="@drawable/ic_settings_white_24dp"
        style="@style/DrawerTextStyle"/>

</LinearLayout>
