<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Ha Duy Trung
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/menu_quote"
        android:title="@string/quote"
        android:icon="@drawable/ic_format_quote_white_24dp"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@id/menu_send"
        android:title="@string/send"
        android:icon="@drawable/ic_send_white_24dp"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@id/menu_save_draft"
        android:title="@string/save_draft"
        app:showAsAction="never" />

    <item
        android:id="@id/menu_discard_draft"
        android:title="@string/discard_draft"
        app:showAsAction="never" />

    <item
        android:id="@id/menu_guidelines"
        android:title="@string/formatting_guidelines"
        app:showAsAction="never" />

</menu>